Server: Separate password validation and send email for change email Fix route names for reset-password
Client:
Move change email functions to useChangeEmail
Move reset password functions to useResetPassword
Make useMakeFetch for basic requests
Make useChangeEmail.js
Make useResetPasswordreset password front end.js
Change some styling for mobile
Finalise change password styling

--- a/client/src/components/containers/SurfaceContainer/SurfaceContainer.module.scss
+++ b/client/src/components/containers/SurfaceContainer/SurfaceContainer.module.scss
@@ -1,19 +1,32 @@
 @import '../../../styles/variables';
 
 @media (min-width: $tablet-breakpoint) {
+  .container {
+    background-color: var(--background-color);
+  }
+
   .surface {
     padding: 40px 80px;
     border-radius: $base-border-radius;
     border: $base-border;
     width: 600px;
+    height: auto;
   }
 }
 
 @media (max-width: $tablet-breakpoint) {
+  .container {
+    background-color: var(--surface-color);
+  }
+
   .surface {
     height: 100%;
     width: 100%;
     padding: 40px;
+    justify-content: space-between;
+    & > :not(:last-child) {
+      margin: auto;
+    }
   }
 }
 
@@ -23,7 +36,6 @@
   left: 0;
   height: 100%;
   width: 100%;
-  background-color: var(--background-color);
   z-index: 4;
 
   display: flex;
