--- a/client/src/components/containers/SwitchContainer/SwitchContainer.module.scss
+++ b/client/src/components/containers/SwitchContainer/SwitchContainer.module.scss
@@ -8,7 +8,7 @@
 .bigContainer {
   display: grid;
   grid-template: 1fr / 1 fr;
-  overflow-x: hidden;
+  overflow: hidden;
   width: 100%;
   justify-content: center;
 
