--- a/client/src/components/buttons/IconButton/IconButton.module.scss
+++ b/client/src/components/buttons/IconButton/IconButton.module.scss
@@ -6,7 +6,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: $font-l;
+  font-size: inherit;
   color: var(--primary-color);
   height: 1.5em;
   width: 1.5em;
