--- a/client/src/components/inputs/DropDownInput/DropDownInput.module.scss
+++ b/client/src/components/inputs/DropDownInput/DropDownInput.module.scss
@@ -24,12 +24,8 @@
     }
 }
 
-.arrowIndicator {
-    position: relative;
-    transition: transform 2s linear;
-    &.extended {
-        transform: rotate(180deg); 
-    }
+.arrowIcon {
+    transform-origin: center;
 }
 
 .optionsContainer {
