Client: Change Button prop bug Change useChangeEntry to useChangeEntryValue Fix styling bug with table last-first child Start edit task entry @TaskView Add menu to the side of entry table
Server:
Change route for setting entry value
Make route for setting entry

--- a/client/src/pages/TaskView/Taskview.module.scss
+++ b/client/src/pages/TaskView/Taskview.module.scss
@@ -34,3 +34,14 @@ $base-size: 1.2em;
 .editIcons {
   font-size: $font-xl;
 }
+
+.table {
+  tr {
+    td {
+      width: 45%;
+    }
+    &:last-of-type(td) {
+      width: 10%;
+    }
+  }
+}
