--- a/client/src/components/buttons/IconButton/IconButton.module.scss
+++ b/client/src/components/buttons/IconButton/IconButton.module.scss
@@ -1,7 +1,8 @@
 @import 'src/styles/variables.scss';
 
 .container {
-  transition: transform 0.2s, opacity 0.1s, color 0.2s;
+  transition: opacity 0.1s ease-in-out, color 0.2s ease-in-out;
+
   display: inline-flex;
   flex-direction: column;
   align-items: center;
@@ -10,20 +11,14 @@
   color: var(--primary-color);
   height: 1.5em;
   width: 1.5em;
-
-  &:hover {
-    transform: scale(1.01);
-  }
-  &:active {
-    transform: scale(0.99);
-  }
+  overflow: hidden;
 
   &.selected {
     opacity: 1;
   }
 
   &.notSelected {
-    opacity: $opacity-low;
+    opacity: $opacity-very-low;
   }
 
   &.inverse {
@@ -37,6 +32,32 @@
   &.green {
     color: var(--green-color);
   }
+
+  &:hover {
+    opacity: 1;
+  }
+  &:active {
+    opacity: 1;
+  }
+
+  &:hover {
+    .icon {
+      transform: scale(1.1);
+      opacity: 1;
+    }
+  }
+
+  &:active {
+    .icon {
+      transform: scale(0.9);
+      opacity: 1;
+    }
+  }
+}
+
+.icon {
+  transition: transform 0.2s ease-in-out;
+  transform-origin: center center;
 }
 
 .border {
