--- a/client/src/components/inputs/TextBoxInput/TextBoxInput.module.scss
+++ b/client/src/components/inputs/TextBoxInput/TextBoxInput.module.scss
@@ -27,7 +27,7 @@
         width: 100%;
     }
 
-    &.big {
+    &.large {
         font-size: $font-xl;
 
         & > * {
@@ -37,6 +37,9 @@
 
     &.invalid {
         border-color: var(--error-color);
+        ::placeholder {
+            color: red;
+        }
     }
 
     &.valid {
@@ -57,6 +60,10 @@
     &.center {
         text-align: center;
     }
+
+    &.right {
+        text-align: right;
+    }
 }
 
 .buttonsContainer {
@@ -70,6 +77,7 @@
 }
 
 .button {
+    padding: 0;
     opacity: 2;
     color: var(--primary-color);
     width: 0.75em;
