Migrate from create react app to vite Rename all .js files to .jsx

--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -323,7 +323,7 @@ button {
 ::-webkit-scrollbar-thumb:hover {
 }
 
-// App.js
+// App.jsx
 @media (max-width: $tablet-breakpoint) {
     .Content-Container {
         justify-content: center;
