--- a/client/src/styles/variables.scss
+++ b/client/src/styles/variables.scss
@@ -6,10 +6,10 @@ $theme: 'light';
         $theme: 'light';
 
         --background-color: #F9FBFC;
-        --on-background-color: #1C1B1F;
+        --on-background-color: #222222;
         --surface-color: #ffffff;
-        --on-surface-color: #1C1B1F;
-        --primary-color: #2E3440;
+        --on-surface-color: #222222;
+        --primary-color: #222222;
         --on-primary-color: #ffffff;
         --error-color: #db3b21;
         --on-error-color: #ffffff;
@@ -56,7 +56,7 @@ $padding-symmetrical-m: 10px;
 // borders
 $base-border-thickness: 1px;
 
-$base-border-radius: 10px;
+$base-border-radius: 8px;
 $button-border-radius: 100px;
 $chip-border-radius: 10px;
 
