--- a/client/src/components/buttons/Chip/Chip.module.scss
+++ b/client/src/components/buttons/Chip/Chip.module.scss
@@ -3,7 +3,7 @@
 .container {
     background-color: var(--surface-color);
     color: var(--on-surface-color);
-    border-radius: $chip-border-radius;
+    border-radius: $base-border-radius;
     transition: 0.2s background-color, 0.2s color, 0.2s filter;
     border: $base-border;
 
