--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -208,6 +208,29 @@ a {
     background-color: var(--purple-color);
 }
 
+// Typography
+
+.Title-Large {
+    font-weight: 400;
+    font-size: 22px;
+    line-height: 28px;
+}
+
+.Title-Medium {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 24px;
+    letter-spacing: 0.1px;
+}
+
+.Label-Small {
+    opacity: 0.38;
+    font-weight: 500;
+    font-size: 11px;
+    line-height: 16px;
+    letter-spacing: 0.5px;
+}
+
 input {
     border: none;
     background: none;
