Adjust CollapsibleContainer styling and animations Fix CurrentProgress styling Adjust some global styling Adjust styling and organisation of New task
Server:
Update taskSchema (Joi) to be more strict

--- a/client/src/components/containers/CollapsibleContainer/CollapsibleContainer.module.scss
+++ b/client/src/components/containers/CollapsibleContainer/CollapsibleContainer.module.scss
@@ -9,7 +9,7 @@
   border-top: $base-border;
   border-bottom: $base-border;
   gap: 0;
-  overflow-x: hidden;
+  overflow-y: visible;
   & > * {
     margin-top: 10px;
     margin-bottom: 10px;
