Update how Dropdown input works Update styles for dropdown Adjust NewTask according to previous changes

--- a/client/src/pages/NewTask/NewTask.module.scss
+++ b/client/src/pages/NewTask/NewTask.module.scss
@@ -3,3 +3,13 @@
 .titleMedium {
   opacity: $opacity-very-low;
 }
+
+.dropDownOption {
+  font-size: inherit;
+  width: 100%;
+  height: 100%;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+  text-align: left;
+}
