--- a/client/src/components/inputs/DropDownInput/DropDownInput.module.scss
+++ b/client/src/components/inputs/DropDownInput/DropDownInput.module.scss
@@ -48,7 +48,6 @@
 
 .option {
     position: relative;
-    padding: $base-padding;
     font-size: $font-l;
     line-height: 1.5em;
     cursor: pointer;
@@ -56,18 +55,22 @@
     text-overflow: ellipsis;
     overflow: hidden;
     box-sizing: border-box;
-    
-    &:hover {
-        &::after {
-            content: '';
-            background-color: var(--on-surface-color);
-            position: absolute;
-            width: 100%;
-            height: 100%;
-            top: 0;
-            left: 0;
-            opacity: 0.05;
-            border-radius: 8px;
+
+    & > * {
+        padding: $base-padding;
+        &:hover {
+            &::after {
+                content: '';
+                background-color: var(--on-surface-color);
+                position: absolute;
+                width: 100%;
+                height: 100%;
+                top: 0;
+                left: 0;
+                opacity: 0.05;
+                border-radius: 8px;
+                pointer-events: none;
+            }
         }
     }
 }
