Client: Add animation to undo button Change some styling Fix add new time group styling Add animations to time group list in new category

--- a/client/src/pages/NewCategory/NewCategory.module.scss
+++ b/client/src/pages/NewCategory/NewCategory.module.scss
@@ -12,4 +12,10 @@
   gap: $base-gap;
   align-items: center;
   overflow-x: auto;
+  padding-bottom: 10px;
+  width: 100%;
+}
+
+.addGroupButton {
+  font-size: $font-xxl;
 }
