--- a/client/src/components/buttons/IconButton/IconButton.module.scss
+++ b/client/src/components/buttons/IconButton/IconButton.module.scss
@@ -12,6 +12,11 @@
   height: 1.5em;
   width: 1.5em;
   overflow: hidden;
+  box-sizing: content-box;
+
+  min-width: 1.5em;
+  min-height: 1.5em;
+  padding: 0;
 
   &.selected {
     opacity: 1;
