--- a/client/src/pages/Auth/LogIn/LogIn.module.scss
+++ b/client/src/pages/Auth/LogIn/LogIn.module.scss
@@ -4,9 +4,14 @@
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
+  align-items: center;
 
   & > * {
     margin-top: 10px;
     margin-bottom: 10px;
   }
+}
+
+.buttonContainer {
+  width: 100%;
 }
