feat(client): show confirm delete group modal feat(server): set groups route feat(server): set category route refactor: rename --border-color to --border-primary-color for styling feat(client): add MiniPagesContext action for removing specific page feat(client): add editing of categories feat(client): add editing of groups feat(client): make RadioInput refactor: rename confirm delete to confirm delete task fix(client): useAddCategory not updating properly after request feat(client): add deleting of groups fix(client): tasks with repeat but no time never rendering

--- a/client/src/pages/Settings/Settings.module.scss
+++ b/client/src/pages/Settings/Settings.module.scss
@@ -96,7 +96,7 @@
 }
 
 .subSection {
-    border: 1px solid var(--border-color);
+    border: 1px solid var(--border-primary-color);
     border-radius: $base-border-radius;
     padding: 20px;
 }
