--- a/client/src/components/indicators/Streak/Streak.module.scss
+++ b/client/src/components/indicators/Streak/Streak.module.scss
@@ -5,7 +5,7 @@
     width: 2.5em;
     border-radius: 0.5em;
 
-    background-color: var(--border-color);
+    background-color: var(--border-primary-color);
 
     &.some {
         background-color: var(--orange-color);
