--- a/client/src/pages/NewTask/NewTask.module.scss
+++ b/client/src/pages/NewTask/NewTask.module.scss
@@ -1,7 +1,22 @@
-@import 'src/styles/variables.scss';
+@import 'src/styles/index.scss';
 
 .titleMedium {
   opacity: $opacity-very-low;
+  width: 100%;
+  display: grid;
+  grid-template-columns: calc(45% - 0.5em) 55%;
+  grid-template-rows: repeat(auto-fill, auto);
+  grid-row-gap: 0;
+  grid-column-gap: 0.5em;
+
+  > div {
+    text-overflow: ellipsis;
+    overflow-x: hidden;
+    white-space: nowrap;
+    display: inline-flex;
+    align-items: center;
+    gap: 0.5em;
+  }
 }
 
 .dropDownOption {
@@ -12,4 +27,10 @@
   overflow: hidden;
   white-space: nowrap;
   text-align: left;
+}
+
+.headerLeftSide {
+  @extend .Stack-Container;
+  width: 100%;
+  gap: 5px;
 }
