--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -1,4 +1,4 @@
-@import "./variables.scss";
+@import "variables";
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
 :root {
