--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -127,11 +127,12 @@ a {
 
 .Grid-Container {
     display: grid;
-    &.Two-By-Two {
-        grid-template-columns: calc(50% - 5px) calc(50% - 5px);
-        grid-template-rows: calc(50% - 5px) calc(50% - 5px);
-        gap: $base-gap;
-    }
+    grid-template-columns: auto auto;
+    grid-template-rows: auto auto;
+    gap: 10px 10px;
+    grid-template-areas:
+    ". ."
+    ". .";
 }
 
 .Label {
