style: update styling of settings to final design style: update Button styling

--- a/client/src/components/buttons/Button/Button.module.scss
+++ b/client/src/components/buttons/Button/Button.module.scss
@@ -12,7 +12,7 @@
     }
 
     &.outlined {
-        border: 2px solid var(--primary-color);
+        border: 1px solid var(--border-primary-color);
         background-color: var(--surface-color);
         color: var(--on-surface-color);
     }
