--- a/client/src/styles/_mixins.scss
+++ b/client/src/styles/_mixins.scss
@@ -20,3 +20,42 @@
   line-height: 16px;
   letter-spacing: 0.5px;
 }
+
+@mixin Headline-Large {
+  font-weight: 400;
+  font-size: 32px;
+  line-height: 40px;
+}
+
+@mixin Headline-Medium {
+  font-weight: 400;
+  font-size: 28px;
+  line-height: 36px;
+}
+
+@mixin Title-Large {
+  font-weight: 400;
+  font-size: 22px;
+  line-height: 28px;
+}
+
+@mixin Title-Medium {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 24px;
+  letter-spacing: 0.1px;
+}
+
+@mixin Title-Small {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 20px;
+  letter-spacing: 0.1px;
+}
+
+@mixin Body-Small {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 16px;
+  letter-spacing: 0.4px;
+}
